# home-lab-setup

./: .cursorrules  .editorconfig  .gitignore  .markdownlint.json  .start.ps1  CHANGELOG.md  CI-CD-Quality-Gates-Simplified.yml  CI-CD-Quality-Gates.yml  CLEANUP-SUMMARY.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Deploy-Website.ps1  Diagnose-HomeLab.ps1  Direct-Deploy.ps1  Enterprise-Logging-Framework.ps1  HomeLab.psd1  HomeLab.psm1  IMPLEMENTATION-SUMMARY.md  Initialize-HomeLab.ps1  LICENSE  QUICK-START.md  README.md  Repository-Improvement-Summary.md  SECURITY.md  Start-HomeLab.ps1  Start.ps1  Test-HomeLab.ps1  architecture.md  cspell.json  demo-next-layer.ps1  deploy-azure.yml  home-lab-setup.ps1  index.md  main-overview.md  package-lock.json  package.json  pnpm-lock.yaml  temp_test.ps1  ui_prototype.md  why-build.md
.giga/: specifications.json
.github/: dependabot.yml
HomeLab/: HomeLab.psd1  HomeLab.psm1
HomeLab.Utils/: HomeLab.Utils.psd1  HomeLab.Utils.psm1
TestResults/: integration-results.xml  unit-results.xml
_includes/: head.html
_layouts/: default.html
app/: jest.config.cjs  package-lock.json  package.json
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: lib.rs
autopr/: README.md  __init__.py
config/: config.json  homelab.config.json
docs/: ADVANCED-FEATURES.md  API-REFERENCE.md  AUTO-UPDATE.md  CHANGELOG.md  DEVELOPMENT.md  GITHUB-INTEGRATION.md  GITHUB-SECRETS.md  HOW-TO-DEPLOY-WEBSITES.md  KEYBOARD-SHORTCUTS.md  PREREQUISITES.md  SECURITY-CHECKLIST.md  SETUP.md  TESTING-STRATEGY-DETAILED.md  TESTING-STRATEGY.md  TESTING.md  (+10 more)
(+502 files in other folders)
